# Yarr

./: .gitignore  .gitlab-ci.yml  .gitmodules  .syntastic_cpp_config  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Manifest.py  README.md  README.rst  clean.py  flash.py  ip.py  mkdocs.yml
docs/: CMakeLists.txt  analysisconsole.md  bdaq.md  emulator.md  fe65p2.md  fei4.md  felixclient.md  fw_guide.md  hw_guide.md  index.md  install.md  itsdaq.md  kernel_driver.md  localdb.md  localdb.md.cp  logging.md  netio.md  pcie.md  pcie_ext.md  plotting.md  rd53a.md  rd53b.md  rootscripts.md  scanconsole.md  star.md  troubleshooting.md  updating_firmware.md  version.md
src/: .gitignore  .syntastic_cpp_config  CMakeLists.txt  Makefile  basicAnalogScan.sh  basicDigitalScan.sh  basicThresholdScan.sh  basicTotScan.sh  cfg_test.json  dbLogin.sh  db_login.sh  doDemo.sh  doEverything.sh  doScan.sh  doScan_fei4b.sh  doScan_rd53a.sh  generateConfig.sh  measure_Current.sh  runMe.sh  run_AFE-measurement.sh  run_tune-rd53a.sh  scanConsole_example.gcfg  scan_config.json  test.json  tune-fei4.sh  tune-rd53a.sh  tune-rd53a_DIFF1000.sh  tune-rd53a_DIFF1300.sh  tune-rd53a_LIN1000.sh  tune-rd53a_LIN1300.sh  tune-rd53a_SYN1000.sh  tune-rd53a_SYN1300.sh  tune.sh
src/cmake/: linux-clang  linux-gcc  macos-clang  rce-arm32  rce-arm64  rce-gcc
src/configs/: .gitignore  bocCfg.json  createConfig.sh  create_config.sh  create_fei4b_4chip_config.sh  default_fei4b.json  emuCfg.json  example_fei4b_setup.json  example_rd53a_setup.json  example_setup.json  fei4b_test0.json  fei4b_test1.json  fei4b_test2.json  fei4b_test3.json  ku040Cfg.json  rceCfg.json  specCfg.json  testRunEnv.json  testRunInfo.json
src/kernel/: .gitignore  99-spec.rules  Makefile  base.c  base.h  common.h  compat.h  config.h  int.c  int.h  ioctl.c  ioctl.h  kmem.c  kmem.h  sysfs.c  sysfs.h  umem.c  umem.h
src/libBdaq/: Bdaq.cpp  Bdaq53.cpp  BdaqAuroraRx.cpp  BdaqCmdRd53.cpp  BdaqController.cpp  BdaqDriver.cpp  BdaqFifoReadout.cpp  BdaqGPIO.cpp  BdaqRBCP.cpp  BdaqRegister.cpp  BdaqRegisterProxy.cpp  BdaqRxCore.cpp  BdaqSi570.cpp  BdaqSiTcpFifo.cpp  BdaqTCP.cpp  BdaqTxCore.cpp  Bdaq_i2c.cpp  CMakeLists.txt
src/libBoc/: BocCom.cpp  BocController.cpp  BocRxCore.cpp  BocTxCore.cpp  CMakeLists.txt
src/libDb/: Database.cpp  Database.h
src/libEmu/: .gitignore  CMakeLists.txt  EmuCom.cpp  EmuController.cpp  EmuRxCore.cpp  EmuShm.cpp  EmuTxCore.cpp  Fei4Emu.cpp  PixelModel.cpp  Rd53aDiffPixelModel.cpp  Rd53aEmu.cpp  Rd53aLinPixelModel.cpp  Rd53aSyncPixelModel.cpp  RingBuffer.cpp  StarChipsetEmu.cpp  StarEmu.cpp  StripModel.cpp
src/libFe65p2/: CMakeLists.txt  Fe65p2.cpp  Fe65p2AnalogScan.cpp  Fe65p2Cfg.cpp  Fe65p2Cmd.cpp  Fe65p2DataProcessor.cpp  Fe65p2DigitalScan.cpp  Fe65p2ExtTrigger.cpp  Fe65p2GlobalCfg.cpp  Fe65p2GlobalFeedback.cpp  Fe65p2GlobalThresholdTune.cpp  Fe65p2MaskLoop.cpp  Fe65p2NoiseScan.cpp  Fe65p2ParameterLoop.cpp  Fe65p2PixelCfg.cpp  Fe65p2PixelFeedback.cpp  Fe65p2PixelThresholdTune.cpp  Fe65p2QcLoop.cpp  Fe65p2ThresholdScan.cpp  Fe65p2TotScan.cpp  Fe65p2TriggerLoop.cpp
src/libFei4/: #Fei4Analysis.cpp#  AllFei4Actions.cpp  CMakeLists.txt  Fei4.cpp  Fei4AnalogScan.cpp  Fei4Analysis.cpp  Fei4Cfg.cpp  Fei4ChargeVsTot.cpp  Fei4Cmd.cpp  Fei4CrossTalkLoop.cpp  Fei4CrossTalkScan.cpp  Fei4DataProcessor.cpp  Fei4DcLoop.cpp  Fei4DigitalScan.cpp  Fei4EventData.cpp  Fei4GlobalCfg.cpp  Fei4GlobalFeedback.cpp  Fei4GlobalPreampRetune.cpp  Fei4GlobalPreampTune.cpp  Fei4GlobalThresholdTune.cpp  Fei4Histogrammer.cpp  Fei4MaskLoop.cpp  Fei4NoiseScan.cpp  Fei4ParameterLoop.cpp  Fei4PixelCfg.cpp  Fei4PixelPreampTune.cpp  Fei4PixelThresholdTune.cpp  Fei4Selftrigger.cpp  Fei4ThresholdScan.cpp  Fei4TimeWalk.cpp  Fei4TotScan.cpp  Fei4TriggerLoop.cpp  StdDcLoop.cpp
src/libFei4Emu/: CMakeLists.txt  Fei4Emu.cpp  Fei4EmuController.cpp  Fei4EmuTxCore.cpp
src/libFelixClient/: CMakeLists.txt  FelixController.cpp  FelixRxCore.cpp  FelixTools.cpp  FelixTxCore.cpp
src/libItkpixv2/: AllItkpixv2Actions.cpp  CMakeLists.txt  Itkpixv2.cpp  Itkpixv2Cfg.cpp  Itkpixv2Cmd.cpp  Itkpixv2CoreColLoop.cpp  Itkpixv2DataProcessor.cpp  Itkpixv2GlobalCfg.cpp  Itkpixv2GlobalFeedback.cpp  Itkpixv2MaskLoop.cpp  Itkpixv2ParMaskLoop.cpp  Itkpixv2ParameterLoop.cpp  Itkpixv2PixelCfg.cpp  Itkpixv2PixelFeedback.cpp  Itkpixv2ReadRegLoop.cpp  Itkpixv2TriggerLoop.cpp
src/libItsdaqFW/: CMakeLists.txt  Checksum.cpp  ItsdaqFW.cpp  ItsdaqHandler.cpp  ItsdaqRxCore.cpp  ItsdaqTxCore.cpp  UdpSocket.cpp
src/libKU040/: CMakeLists.txt  IPbus.cpp  KU040Controller.cpp  KU040RxCore.cpp  KU040TxCore.cpp
src/libNetioHW/: CMakeLists.txt  Netio.cpp  NetioHandler.cpp  NetioRxCore.cpp  NetioTools.cpp  NetioTxCore.cpp  SimpleNetio.cpp  SimpleNetioRxCore.cpp  SimpleNetioTxCore.cpp
src/libRce/: #RceRxCore.cpp#  PGPmaster.cpp  PgpModL.cpp  RCDImasterL.cpp  RCDImasterL.cpp~  RceCom.cpp  RceCom.cpp~  RceController.cpp  RceController.cpp~  RceRxCore.cpp  RceRxCore.cpp~  RceTxCore.cpp  RceTxCore.cpp~
src/libRd53a/: AllRd53aActions.cpp  CMakeLists.txt  Rd53a.cpp  Rd53a2TriggerLoop.cpp  Rd53aCfg.cpp  Rd53aCmd.cpp  Rd53aCoreColLoop.cpp  Rd53aDataProcessor.cpp  Rd53aGlobalCfg.cpp  Rd53aGlobalFeedback.cpp  Rd53aMaskLoop.cpp  Rd53aParameterLoop.cpp  Rd53aPixelCfg.cpp  Rd53aPixelFeedback.cpp  Rd53aReadRegLoop.cpp  Rd53aRingBufLoop.cpp  Rd53aTriggerLoop.cpp  Rd53aTwoParameterLoop.cpp
src/libRd53aEmu/: CMakeLists.txt  Rd53aEmu.cpp  Rd53aEmuController.cpp  Rd53aEmuTxCore.cpp
src/libRd53b/: AllRd53bActions.cpp  CMakeLists.txt  Rd53b.cpp  Rd53bAnalysis.cpp  Rd53bCfg.cpp  Rd53bChipMap.cpp  Rd53bCmd.cpp  Rd53bCoreColLoop.cpp  Rd53bDataProcessor.cpp  Rd53bEncodingTool.cpp  Rd53bGlobalCfg.cpp  Rd53bGlobalFeedback.cpp  Rd53bHistogrammer.cpp  Rd53bMaskLoop.cpp  Rd53bParMaskLoop.cpp  Rd53bParameterLoop.cpp  Rd53bPixelCfg.cpp  Rd53bPixelFeedback.cpp  Rd53bReadRegLoop.cpp  Rd53bTriggerLoop.cpp
src/libRogue/: CMakeLists.txt  RogueCom.cpp  RogueController.cpp  RogueRxCore.cpp  RogueTxCore.cpp
src/libSpec/: AD7995.cpp  BenchmarkTools.cpp  CMakeLists.txt  Exception.cpp  KernelMemory.cpp  Si534x.cpp  SimpleI2C.cpp  (+6 more)
(+2113 files in other folders)
